--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,9 @@
+title: ios admin dashboard
 email: ml-flyvemdm@teclib.com
+twitter: flyvemdm
 baseurl: "/flyve-mdm-ios-admin-dashboard"
-url: "http://flyve.org"
+url: "http://flyve.org"   
+image: http://flyve.org/flyve-mdm-ios-admin-dashboard/images/logo2.png
 
 # Build settings
 markdown: kramdown
