docs(config): change project url

--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,9 @@
 title: ios admin dashboard
 email: ml-flyvemdm@teclib.com
 twitter: flyvemdm
-baseurl: "/flyve-mdm-ios-admin-dashboard"
+baseurl: "/ios-mdm-dashboard"
 url: "http://flyve.org"   
-image: http://flyve.org/flyve-mdm-ios-admin-dashboard/images/logo2.png
+image: http://flyve.org/ios-mdm-dashboard/images/logo2.png
 
 # Build settings
 markdown: kramdown
@@ -13,7 +13,7 @@ plugins:
   - jekyll-feed
   - jekyll-sitemap
 
-repository: flyve-mdm/flyve-mdm-ios-admin-dashboard
+repository: flyve-mdm/ios-mdm-dashboard
 
 prose:
 
