--- a/_config.yml
+++ b/_config.yml
@@ -70,10 +70,10 @@ prose:
           element: "text"
           label: "Permalink"
           value: ""
-      - name: "how-tos"
+      - name: "howtos"
         field:
           element: "checkbox"
-          label: "how-tos"
+          label: "howtos"
           value: false
       - name: "published"
         field:
