build(package): update repo slug
Signed-off-by: Naylin Medina <nmedina@teclib.com>

--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "flyve-mdm-ios-admin-dashboard",
+  "name": "ios-mdm-dashboard",
   "version": "1.0.0",
   "description": "Branch created with the intention of functioning as an introduction web site of the project, a small point of entry where anyone can find out what it is about and to be able to get relevant information.",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/flyve-mdm/flyve-mdm-ios-admin-dashboard.git"
+    "url": "git+https://github.com/flyve-mdm/ios-mdm-dashboard.git"
   },
   "sasslintConfig": ".sass-lint.yml",
   "scripts": {
@@ -18,9 +18,9 @@
   "author": "",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/flyve-mdm/flyve-mdm-ios-admin-dashboard/issues"
+    "url": "https://github.com/flyve-mdm/ios-mdm-dashboard/issues"
   },
-  "homepage": "https://github.com/flyve-mdm/flyve-mdm-ios-admin-dashboard#readme",
+  "homepage": "https://github.com/flyve-mdm/ios-mdm-dashboard#readme",
   "devDependencies": {
     "eslint": "^4.7.2",
     "eslint-config-google": "^0.9.1",
