--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,6 +13,36 @@ references:
       name: Build app
       command: source ci/scripts/build.sh
 
+  bundler_config: &bundler_config
+    run:
+      name: Configure bundler
+      command: source ./ci/scripts/bundler_config.sh
+
+  install_ruby: &install_ruby
+    run:
+      name: Configure Ruby dependencies
+      command: source ./ci/scripts/install_ruby.sh
+
+  set_locate: &set_locate
+    run:
+      name: Configure utf-8 locate
+      command: source ./ci/scripts/set_locate.sh
+
+  fastlane_config: &fastlane_config
+    run:
+      name: Configure Fastlane environment variables
+      command: source ./ci/scripts/fastlane_config.sh
+  
+  test_app: &test_app
+    run:
+      name: Test project
+      command: source ./ci/scripts/test.sh
+  
+  install: &install
+    - run:
+      name: Install dependencies
+      command: source ./ci/scripts/install.sh
+
 jobs:
 
   build:
@@ -22,25 +52,14 @@ jobs:
       - *build_app
 
   test:
-    macos:
-      xcode: "9.2.0"
+    <<: *container_config
     steps:
       - checkout
-      - run:
-          name: Configure bundler
-          command: source ./ci/scripts/bundler_config.sh
-      - run:
-          name: Configure Ruby dependencies
-          command: source ./ci/scripts/install_ruby.sh
-      - run:
-          name: Configure utf-8 locate
-          command: source ./ci/scripts/set_locate.sh
-      - run:
-          name: Configure Fastlane environment variables
-          command: source ./ci/scripts/fastlane_config.sh
-      - run:
-          name: Build and Test project
-          command: source ./ci/scripts/test.sh
+      - *bundler_config
+      - *install_ruby
+      - *set_locate
+      - *fastlane_config
+      - *test_app
 
   deploy_develop:
     macos:
