--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -68,12 +68,23 @@ references:
       environment:
         SCRIPT_PATH: ./ci/scripts
   
+  deploy_master: &deploy_master
+    run:
+      name: Master deploy
+      command: source ./ci/scripts/deploy_master.sh
+      environment:
+        SCRIPT_PATH: ./ci/scripts
+  
   keychain_remove: &keychain_remove
     run:
       name: Remove keychain & certificates
       command: source ./ci/scripts/keychain_remove.sh
       environment:
         KEYCHAIN_NAME: ios-app.keychain
+  
+  store_ipa: &store_ipa
+    store_artifacts:
+      path: ./$APPNAME.ipa
 
 jobs:
 
@@ -109,46 +120,20 @@ jobs:
       - *keychain_remove
   
   deploy_master:
-    macos:
-      xcode: "9.2.0"
+    <<: *container_config
     steps:
       - checkout
-      - run:
-          name: Configure bundler
-          command: source ./ci/scripts/bundler_config.sh
-      - run:
-          name: Install dependencies
-          command: source ./ci/scripts/install.sh
-      - run:
-          name: Configure utf-8 locate
-          command: source ./ci/scripts/set_locate.sh
-      - run:
-          name: Configure Fastlane environment variables
-          command: source ./ci/scripts/fastlane_config.sh
-      - run:
-          name: Create keychain & Add certificates
-          command: source ./ci/scripts/keychain_add.sh
-          environment:
-            CERTIFICATES_PATH: ./ci/cert
-            KEYCHAIN_NAME: ios-app.keychain
-      - run:
-          name: Configure github
-          command: source ./ci/scripts/git_config.sh
-      - run:
-          name: Configure Transifex
-          command: source ./ci/scripts/transifex.sh
-      - run:
-          name: Master deploy
-          command: source ./ci/scripts/deploy_master.sh
-          environment:
-            SCRIPT_PATH: ./ci/scripts
-      - store_artifacts:
-          path: ./$APPNAME.ipa
-      - run:
-          name: Remove keychain & certificates
-          command: source ./ci/scripts/keychain_remove.sh
-          environment:
-            KEYCHAIN_NAME: ios-app.keychain
+      - *bundler_config
+      - *install
+      - *set_locate
+      - *fastlane_config
+      - *keychain_add
+      - *git_config
+      - *transifex
+      - *test_app
+      - *deploy_master
+      - *store_ipa
+      - *keychain_remove
 
 workflows:
   version: 2
