--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -86,6 +86,13 @@ references:
     store_artifacts:
       path: ./$APPNAME.ipa
 
+  create_documentation: &create_documentation
+    run:
+      name: Generate documentation
+      command: source ci/scripts/documentation.sh
+      environment:
+        DOCUMENTATION_DESTINATION: development/code-documentation/
+
 jobs:
 
   build:
@@ -103,6 +110,16 @@ jobs:
       - *set_locate
       - *fastlane_config
       - *test_app
+  
+  documentation:
+    <<: *container_config
+    steps:
+      - checkout
+      - *bundler_config
+      - *install
+      - *set_locate
+      - *git_config
+      - *create_documentation
 
   deploy_develop:
     <<: *container_config
@@ -137,25 +154,17 @@ jobs:
 
 workflows:
   version: 2
-  build-and-test:
+  build-test-deploy:
     jobs:
       - build
       - test:
-          filters:
-            branches:
-              ignore: 
-                - develop
-      - deploy_develop:
           requires:
             - build
-          filters:
-            branches:
-              only: 
-                - develop
-      - deploy_master:
+      - documentation:
           requires:
             - test
           filters:
             branches:
-              only: 
+              only:
                 - master
+                - develop
