ci(coverage): run test before coverage
Signed-off-by: Hector Rondon <hrondon@teclib.com>

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -138,6 +138,7 @@ jobs:
       - *set_locate
       - *fastlane_config
       - *git_config
+      - *test_app
       - *create_coverage
 
   deploy_develop:
