--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -197,8 +197,8 @@ jobs:
       - *git_config
       - *transifex
       - *beta_version
-  
-  deploy_master:
+
+  release:
     <<: *container_config
     steps:
       - checkout
@@ -209,10 +209,8 @@ jobs:
       - *keychain_add
       - *git_config
       - *transifex
-      - *test_app
-      - *deploy_master
-      - *store_ipa
-      - *keychain_remove
+      - *release_app
+      - *publish_app
 
   update_cache:
     <<: *container_config
