ci(coverage): update xcov dependency
Signed-off-by: Hector Rondon <hrondon@teclib.com>

--- a/FlyveMDMAdminDashboard.xcodeproj/xcshareddata/xcschemes/FlyveMDMAdminDashboard.xcscheme
+++ b/FlyveMDMAdminDashboard.xcodeproj/xcshareddata/xcschemes/FlyveMDMAdminDashboard.xcscheme
@@ -28,6 +28,15 @@
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       codeCoverageEnabled = "YES"
       shouldUseLaunchSchemeArgsEnv = "YES">
+      <CodeCoverageTargets>
+         <BuildableReference
+            BuildableIdentifier = "primary"
+            BlueprintIdentifier = "0A02916220E4363D00E4DF71"
+            BuildableName = "FlyveMDMAdminDashboard.app"
+            BlueprintName = "FlyveMDMAdminDashboard"
+            ReferencedContainer = "container:FlyveMDMAdminDashboard.xcodeproj">
+         </BuildableReference>
+      </CodeCoverageTargets>
       <Testables>
          <TestableReference
             skipped = "NO">
