ci(install): install latest version pods before build
Signed-off-by: Hector Rondon <hrondon@teclib.com>

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -143,6 +143,8 @@ jobs:
     <<: *container_config
     steps:
       - checkout
+      - *bundler_config
+      - *install
       - *build_app
 
   test:
